--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lenis": "^1.3.8",
     "lucide-react": "^0.539.0",
     "maath": "^0.10.8",
+    "ogl": "^1.0.11",
     "postprocessing": "^6.37.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
